--- a/web.css
+++ b/web.css
@@ -1,16 +1,16 @@
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-.containter{
+.container{
     scroll-snap-type: y mandatory;
     overflow-y: scroll; 
     height: 100vh;
 }
 
-section{
+section {
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -18,7 +18,7 @@ section{
     scroll-snap-align: start;
 }
 
-h1{
+h1 {
     color: rgb(226, 226, 226);
     text-shadow: 1px 1px 4px #000;
 }
