--- a/web.css
+++ b/web.css
@@ -1,3 +1,18 @@
+@keyframes fade-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) scale(0.9);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateY(0px) scale(1);
+    }
+}
+
+h1#title{
+    animation: fade-down  0.5s 0.4s backwards;
+}
 * {
     margin: 0;
     padding: 0;
@@ -38,3 +53,4 @@ h1 {
 .four{
     background-color: rgb(191, 64, 191);
 }
+
