--- a/web.css
+++ b/web.css
@@ -4,7 +4,7 @@
         transform: translateY(-30px) scale(0.9);
     }
 
-    100%{
+    100% {
         opacity: 1;
         transform: translateY(0px) scale(1);
     }
@@ -36,6 +36,7 @@ section {
 h1 {
     color: rgb(226, 226, 226);
     text-shadow: 1px 1px 4px #000;
+    animation: fade-down 0.5s 0.4s backwards;
 }
 
 .one {
